# schwarzl_project_2

./: .gitignore  CHANGELOG.org  README.md  example_config.json  meson.build  meson_options.txt
doc/: algorithm.tex  implementation.tex  instructions.tex  introduction.tex  literatur.bib  main.tex
include/: distance_vector.h  node.h  reciever.h  sender.h  utils.h  vector_entry.h
src/: distance_vector.proto  main.cpp  node.cpp  proto_messages.proto  reciever.cpp  sender.cpp
src/controller/: main.cpp  utils.cpp
src/node/: distance_vector.cpp  main.cpp  node.cpp  sender.cpp
